--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>JS Clock</title>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
+<div class="time">
 	<h1> <span id="hours"></span>:<span id="minutes"></span>:<span id="seconds"></span> <span id="amOrPm">PM</span></h1>
+</div>
+
+<div class="clock">
+	<div class="face">
+		<div id="s-hand" class="s hand"></div>
+		<div id="m-hand" class="m hand"></div>
+		<div id="h-hand" class="h hand"></div>
+	</div>
+</div>
+
+	
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
